--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>    
     </section>
     <!-- projects-end -->
-    <php? include `send.php`; ?>
+    <!-- <php? include `send.php`; ?> -->
     <form class="consultation__form">
         <input type="text" name="name" placeholder="Ваше имя*" required>
         <input type="tel" name="phone" placeholder="Ваш телефон*" required>
