--- a/index.html
+++ b/index.html
@@ -61,27 +61,29 @@
         </div>    
     </section>
     <script>
-        const siteForm = document.querySelector('.consultation__form');
-        if (siteForm) {
-            siteForm.addEventListener('submit',async (e) => {
-                e.preventDefault();
-                const item = e.target;
-                const submitBtn =  item.querySelector('input[type=submit]');
-                submitBtn.setAttribute('disabled', 'true');
-        
-                let response = await fetch('/send.php', {
-                    method: 'POST',
-                    body: new FormData(item)
-                })
-                    .then(data => {
-                        item.reset();
+        window.addEventListener("DOMContentLoaded", (event) => {
+            const siteForm = document.querySelector('.consultation__form');
+            if (siteForm) {
+                siteForm.addEventListener('submit',async (e) => {
+                    e.preventDefault();
+                    const item = e.target;
+                    const submitBtn =  item.querySelector('input[type=submit]');
+                    submitBtn.setAttribute('disabled', 'true');
+            
+                    let response = await fetch('/send.php', {
+                        method: 'POST',
+                        body: new FormData(item)
                     })
-                    .catch((error) => console.log("ошибка!", error))
-                    .finally(() => {
-                        submitBtn.removeAttribute('disabled');
-                    });
-            })
-        }
+                        .then(data => {
+                            item.reset();
+                        })
+                        .catch((error) => console.log("ошибка!", error))
+                        .finally(() => {
+                            submitBtn.removeAttribute('disabled');
+                        });
+                })
+            }
+        });
     </script>
     <form class="consultation__form">
         <input type="text" name="name" placeholder="Ваше имя*" required>
