--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
     <link rel="stylesheet" href="./css/node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>loonGo</title>
+    <script>
+        window.addEventListener("DOMContentLoaded", (event) => {
+            const siteForm = document.querySelector('.consultation__form');
+            if (siteForm) {
+                siteForm.addEventListener('submit',async (e) => {
+                    e.preventDefault();
+                    const item = e.target;
+                    const submitBtn =  item.querySelector('input[type=submit]');
+                    submitBtn.setAttribute('disabled', 'true');
+            
+                    let response = await fetch('/send.php', {
+                        method: 'POST',
+                        body: new FormData(item)
+                    })
+                        .then(data => {
+                            item.reset();
+                        })
+                        .catch((error) => console.log("ошибка!", error))
+                        .finally(() => {
+                            submitBtn.removeAttribute('disabled');
+                        });
+                })
+            }
+        });
+    </script>
 
 </head>
 <body>
@@ -60,31 +85,7 @@
             </div>
         </div>    
     </section>
-    <script>
-        window.addEventListener("DOMContentLoaded", (event) => {
-            const siteForm = document.querySelector('.consultation__form');
-            if (siteForm) {
-                siteForm.addEventListener('submit',async (e) => {
-                    e.preventDefault();
-                    const item = e.target;
-                    const submitBtn =  item.querySelector('input[type=submit]');
-                    submitBtn.setAttribute('disabled', 'true');
-            
-                    let response = await fetch('/send.php', {
-                        method: 'POST',
-                        body: new FormData(item)
-                    })
-                        // .then(data => {
-                        //     item.reset();
-                        // })
-                        .catch((error) => console.log("ошибка!", error))
-                        .finally(() => {
-                            submitBtn.removeAttribute('disabled');
-                        });
-                })
-            }
-        });
-    </script>
+
     <form class="consultation__form">
         <input type="text" name="name" placeholder="Ваше имя*" required>
         <input type="tel" name="phone" placeholder="Ваш телефон*" required>
