--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
     <script>
         window.onload=function(){
+            console.log('первое');
             const siteForm = document.querySelector('.consultation__form');
+            console.log('второе');
             if (siteForm) {
                 console.log('Успех');
                 siteForm.addEventListener('submit',async (e) => {
