--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                     submitBtn.setAttribute('disabled', 'true');
                     console.log('Снег');
             
-                    let response = await fetch('./send.php', {
+                    let response = await fetch('/send.php', {
                         method: 'POST',
-                        body: new FormData(item),
-                        console.log('Новый год'),
-                    }) 
+                        body: new FormData(item)
+                    });
+                    console.log("Запрос") 
                         .then(data => {
                             console.log('Зима');
                             item.reset();
